wip: add .gitignore and starter data

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+_LOCAL/ProjectGuidelines.pdf
+_LOCAL/Video_Game_Library_Management_System_(Java_Console_App).pdf
