--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ hs_err_pid*
 replay_pid*
 _LOCAL/ProjectGuidelines.pdf
 _LOCAL/Video_Game_Library_Management_System_(Java_Console_App).pdf
+_LOCAL/video_games_ORIG.csv
+_LOCAL/video_games.csv
